kubernetes-manifests-infra/efk/elasticsearch-metricbeat.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: elasticsearch-metricbeat
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: metricbeat
spec:
  serviceName: elasticsearch-metricbeat
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
      role: metricbeat
  template:
    metadata:
      labels:
        component: elasticsearch
        role: metricbeat
    spec:
      containers:
        - name: elasticsearch-metricbeat
          image: harbor.freedom.org/elastic/metricbeat:7.14.1
          command: ["sh", "-c", "/usr/share/metricbeat/metricbeat -E setup.kibana.host=elasticsearch-kibana.elasticsearch.svc.cluster.local.:5601 -E output.elasticsearch.hosts=['elasticsearch-master.elasticsearch.svc.cluster.local.:9200']"]
          volumeMounts:
            - name: elasticsearch-metricbeat-conf
              mountPath: /usr/share/metricbeat/modules.d/elasticsearch-xpack.yml
              subPath: elasticsearch-xpack.yml
              readOnly: true
      volumes:
        - name: elasticsearch-metricbeat-conf
          configMap:
            name: elasticsearch-metricbeat-conf
