kubernetes-manifests-infra/efk/filebeat-daemonset.yaml
# 参考：https://cloud.tencent.com/developer/news/717602
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: elasticsearch
  labels:
    app: filebeat
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      name: filebeat
      labels:
        app: filebeat
    spec:
      serviceAccountName: filebeat
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: filebeat
          image: harbor.freedom.org/elastic/filebeat:7.14.1
          args:
            - "-c"
            - "/usr/share/filebeat/filebeat.yml"
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
            - name: docker-log-dir
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: filebeat
        - name: docker-log-dir
          hostPath:
            path: /var/lib/docker/containers
