kubernetes-manifests-infra/efk/elasticsearch-data.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: elasticsearch-data
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 3
  selector:
    matchLabels:
      component: elasticsearch
      role: data
  template:
    metadata:
      labels:
        component: elasticsearch
        role: data
    spec:
      serviceAccountName: elasticsearch-data
      containers:
        - name: elasticsearch-data
          image: harbor.freedom.org/elastic/elasticsearch:7.9.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 1024Mi
          ports:
            - name: http
              containerPort: 9200
              protocol: TCP
            - name: transport
              containerPort: 9300
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
        annotations:
          volume.beta.kubernetes.io/storage-class: storageclass-nfs-infra
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Gi

---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-data
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: data
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    component: elasticsearch
    role: data
  ports:
    - name: transport
      port: 9300
      protocol: TCP
