kubernetes-manifests-infra/efk/elasticsearch-master.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: elasticsearch-master
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: master
spec:
  serviceName: elasticsearch-master
  replicas: 3
  selector:
    matchLabels:
      component: elasticsearch
      role: master
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      serviceAccountName: elasticsearch-master
      containers:
        - name: elasticsearch-master
          image: harbor.freedom.org/elastic/elasticsearch:7.14.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 1024Mi
          ports:
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-master
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-master
        annotations:
          volume.beta.kubernetes.io/storage-class: storageclass-nfs-infra
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi


---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: master
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    component: elasticsearch
    role: master
  ports:
    - name: transport
      port: 9300
      protocol: TCP


---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master-nodeport
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: master
spec:
  type: NodePort
  selector:
    component: elasticsearch
    role: master
  ports:
    - name: http
      port: 9200
      protocol: TCP
    - name: transport
      port: 9300
      protocol: TCP
