kubernetes-manifests-infra/efk/kibana.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  type: ClusterIP
  selector:
    component: elasticsearch
    role: kibana
  ports:
    - name: kibana
      port: 5601
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: kibana-nodeport
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  type: NodePort
  selector:
    component: elasticsearch
    role: kibana
  ports:
    - name: kibana
      port: 5601
      protocol: TCP


---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
      role: kibana
  template:
    metadata:
      labels:
        component: elasticsearch
        role: kibana
    spec:
      containers:
        - name: kibana
          image: harbor.freedom.org/elastic/kibana:7.14.1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 4096Mi
          ports:
            - name: kibana
              containerPort: 5601
          volumeMounts:
            - name: kibana-yml
              mountPath: /usr/share/kibana/config/kibana.yml
              subPath: kibana.yml
              readOnly: true
      volumes:
        - name: kibana-yml
          configMap:
            name: kibana-configmap
