kubernetes-manifests-infra/efk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elasticsearch
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kibana.k8s.freedom.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana
              port:
                number: 5601
    - host: elasticsearch.k8s.freedom.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-client
                port:
                  number: 9200
    - host: es.k8s.freedom.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-client
                port:
                  number: 9200
